--- a/BusinessLayer/ProcessEmails.xaml
+++ b/BusinessLayer/ProcessEmails.xaml
@@ -2,11 +2,12 @@
   <x:Members>
     <x:Property Name="in_ApprovedList" Type="InArgument(x:String)" />
     <x:Property Name="out_Email" Type="OutArgument(snm:MailMessage)" />
+    <x:Property Name="in_BRE1" Type="InArgument(x:String)" />
   </x:Members>
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>560,582</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>558.6666666666666,630.6666666666666</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ProcessEmails_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -93,7 +94,7 @@
       <AssemblyReference>System.Linq.Queryable</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="ProcessEmails" sap:VirtualizedContainerService.HintSize="450,517.3333333333334" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="ProcessEmails" sap:VirtualizedContainerService.HintSize="450,566" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="scg:List(snm:MailMessage)" Name="EmailFilteredList" />
     </Sequence.Variables>
@@ -102,15 +103,13 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:LogMessage DisplayName="Log Message Process Emails" sap:VirtualizedContainerService.HintSize="388,96" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[&quot;Process Emails...&quot;]" />
+    <ui:LogMessage DisplayName="Log Message Process Emails" sap:VirtualizedContainerService.HintSize="388,144.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[&quot;Process Emails...&quot;]" />
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Read Emails - Process Emails" sap:VirtualizedContainerService.HintSize="388,115.33333333333333" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="ServiceLayer\ReadEmails.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <OutArgument x:TypeArguments="scg:List(snm:MailMessage)" x:Key="out_readEmails">
-          <VisualBasicReference x:TypeArguments="scg:List(snm:MailMessage)" ExpressionText="EmailFilteredList" />
-        </OutArgument>
+        <OutArgument x:TypeArguments="scg:List(snm:MailMessage)" x:Key="out_readEmails">[EmailFilteredList]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
-    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Filter Emails - Process Emails" sap:VirtualizedContainerService.HintSize="388,115.33333333333333" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="ServiceLayer\FilterEmails.xaml">
+    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Filter Emails - Process Emails" sap:VirtualizedContainerService.HintSize="388,115.33333333333333" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="BusinessLayer\FilterEmails.xaml">
       <ui:InvokeWorkflowFile.Arguments>
         <InArgument x:TypeArguments="x:String" x:Key="in_ApprovedList">
           <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_ApprovedList" />
@@ -121,6 +120,9 @@
         <OutArgument x:TypeArguments="snm:MailMessage" x:Key="out_Email">
           <VisualBasicReference x:TypeArguments="snm:MailMessage" ExpressionText="out_Email" />
         </OutArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_BRE1">
+          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_BRE1" />
+        </InArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
   </Sequence>
